Respond with reviews instead of counter
